# QuIP

./: .gitignore  AUTHORS  COPYING  FILE2  FILE3  FILE4  INSTALL  Makefile.am  README  README.git  README.jbm_notes  README.packages  configure.ac  cuda_comp_cap.c  def_config.csh  fast_config.csh  gpu_check.c  homebrew_pkgs  make_macro_index.csh  ylwrap  yum_install.csh
doc/: .gitignore  Makefile.am  quip.texi  texinfo.tex
docs/: Makefile.am  README  index.html
docs/quip_web_manual/: Advanced-Graphics.html  Advanced-variable-usage.html  Analog-I_002fO.html  Builtin-commands.html  Command-Language.html  Control-Panels.html  Creating-Data-Objects.html  Creating-a-viewer.html  Data-Objects.html  Dimensions.html  Displaying-Images.html  Displaying-the-menu.html  Exiting-the-menu.html  Expression-Language.html  First-steps.html  Frame-grabbers.html  Generating-output.html  History.html  Image-Files.html  Index.html  Input-redirection.html  Installing-QuIP.html  Interacting-with-the-system.html  Interactive-Features.html  Interfacing-Hardware.html  LML-BT848.html  Loading-a-viewer.html  Loop-control.html  Macros.html  Manipulating-viewers.html  Matrox-meteor-RGB.html  Menus.html  Numeric-variables.html  Overview.html  Parallel-port.html  Plotting-Data.html  Predefined-macros.html  Prompts.html  QuIPindex.html  Response-completion.html  (+14 more)
include/: .gitignore  Makefile.am  Xhs.h  ascii_fmts.h  boolean.h  callback_api.h  camera.h  camera_api.h  chewtext.h  cmaps.h  command.h  container.h  container_fwd.h  ctx_pair.h  cuda_api.h  cuda_helper.h  cuda_supp.h  data_obj.h  dct8.h  debug.h  debug_module.h  dict.h  display.h  dispobj.h  dobj_basic.h  dobj_prot.h  fileck.h  filerd.h  filetype.h  fio_api.h  fitsine.h  freel.h  func_helper.h  function.h  function_basic.h  gen_win.h  genwin_flags.h  getbuf.h  gl_info.h  gl_viewer.h  (+130 more)
include/hips/: Makefile.am  hip1hdr.h  hip2hdr.h  hipbasic.h  hiperror.h  hipl_fmt.h  hips1.h  hips2.h  hips_pf.h  perr.h  rdoldhdr.h  readhdr.h  xparam.h
include/img_file/: Makefile.am  avcodec_hdr.h  bdf_hdr.h  bmp_hdr.h  fio_png.h  fiotiff.h  glimage.h  img_file_hdr.h  jbm_ppm.h  jpeg_hdr.h  lshdr.h  matio_api.h  matio_hdr.h  my_avi.h  png_hdr.h  ppmhdr.h  rasterf.h  raw.h  rv.h  sir_disk.h  sunras.h  tiff_hdr.h  vistahdr.h  wav.h  wav_hdr.h
include/veclib/: .gitignore  Makefile.am  README  all_bit_kernels.h  all_bit_kernels.m4  all_float_kernels.h  all_float_kernels.m4  all_int_kernels.h  all_int_kernels.m4  all_mixed_float_kernels.h  all_mixed_float_kernels.m4  all_mixed_int_kernels.h  all_mixed_int_kernels.m4  all_mixed_uint_kernels.h  all_mixed_uint_kernels.m4  all_same_prec_vec.c  all_same_prec_vec.m4  all_uint_kernels.h  all_uint_kernels.m4  all_vec.c  all_vec.m4  asc_classes.c  bit_defs.h  bit_defs.m4  bitmap_ops.c  bitmap_ops.h  by_defs.h  by_defs.m4  conv_vec.c  cpu_host_call_defs.m4  cpx_args.h  cpx_args.m4  cpx_vec.c  cpx_vec.m4  cu2_func_prot.m4  cu2_port.h  cu2_port.m4  cu2_veclib_prot.h  cu2_veclib_prot.m4  di_defs.h  (+145 more)
libsrc/: Makefile.am  find_bugs.csh
libsrc/aravis/: ex1.c
libsrc/atc/: Makefile.am  atcmain.c  conflict.c  conflict.h  delay.c  draw.c  draw.h  event.c  flight_path.h  geom.c  geom.h  model.c  model.h  pathgen.c  planes.c  session_order.c
libsrc/cstepit/: Makefile.am  README  am_supp.c  cs_supp.c  cstepit.h  fitsine.c  new_cs_supp.c  new_stepit.c  pkg.c  pr_supp.c  sparse.c  sparse.h  stepit.c  stepmenu.c  stepsupp.c
libsrc/cu2/: .gitignore  Makefile.am  _cu2_utils.c  cu2.c  cu2_centroid.cu  cu2_centroid.m4  cu2_centroid_defs.m4  cu2_curand.c  cu2_fft.c  cu2_fft.cu  cu2_fft_funcs.m4  cu2_fft_supp.c  cu2_fill.cu  cu2_fill.m4  cu2_func_tbl.c  cu2_func_tbl.h  cu2_funcs.cu  cu2_host_call_defs.h  cu2_host_call_defs.m4  cu2_host_funcs.c  cu2_host_funcs.m4  cu2_host_untyped_call_defs.h  cu2_kern_call_defs.h  cu2_kern_call_defs.m4  cu2_kernels.c  cu2_kernels.m4  cu2_menu.c  cu2_streams.c  cu2_typed_fft_funcs.m4  cu2_typtbl.c  cu2_typtbl.h  cu2_typtbl.m4  cu2_utils.c  cu2_utils.cu  cu2_utils.m4  cu2_veclib.c  cu2_veclib.m4  cu2_viewer.c  cu2_viewer.h  cu2_yuv2rgb.cu  (+5 more)
libsrc/cuda/: .gitignore  BUGS  Makefile.am  README  README.cuda  all_funcs.h  all_prot.h  bit_prot.h  call_defs.h  conversions.cu  conversions.h  cu2_centroid.cu  cu2_centroid_expanded.c  cu2_fill_expanded.c  cuda.cpp  cuda_centroid.cu  cuda_curand.cpp  cuda_error.c  cuda_func_tbl.cpp  cuda_menu.cpp  cuda_npp.cpp  cuda_port.h  cuda_streams.c  cuda_viewer.cpp  cuda_viewer.h  deviceQuery.cpp  fakit.cpp  fill.cu  float_prot.h  glx_hack.h  gpu_all.cu  gpu_bit.cu  gpu_call_utils.h  gpu_calls.h  gpu_cent.cu  gpu_int.cu  gpu_signed.cu  hcall_defs.h  host_call_utils.h  host_calls.h  (+17 more)
libsrc/das1602/: Makefile.am  dastst.c  ioctl_das1602.h  pacer.c  pacer.h
libsrc/datamenu/: Makefile.am  ascmenu.c  datamenu.c  dataprot.h  ops_menu.c  verdatam.c
libsrc/dither/: Makefile.am  cdiff.c  cie.h  cspread.c  ctone.c  ctone.h  dspread.c  getbest.c  getwhite.c  gspread.c  phosmax.h  qlevel.h  rb2rgb.c  requant.c  requant.h  spread.c  tspread.c
libsrc/dobj/: .gitignore  Makefile.am  areas.c  arrays.c  ascii.c  ascmenu.c  contig.c  data_fns.c  data_obj.c  dataport.c  dfuncs.c  dobj_expr.c  dobj_menu.c  dobj_private.h  dobj_util.c  dplist.c  equivalence.c  get_obj.c  index.c  makedobj.c  memops.c  ops_menu.c  shape_info.c  sub_obj.c  verdata.c
libsrc/fann/: Makefile.am  fann_menu.c  fann_util.c  my_fann.h
libsrc/fileio/: .gitignore  Makefile.am  api_example.c  avi.c  avi_info_file.c  avio_reading.c  bdf.c  bdf.h  bmp.c  bmp.h  bmp_hdr.h  cderror.h  cdjpeg.h  copts.c  dsk.c  fileport.c  filetype.c  fio_menu.c  fio_mpeg.h  fio_png.h  fio_prot.h  fioasc.c  fioasc.h  fiojpeg.h  fiomenu.c  get_hdr.c  get_hdr.h  herrs.c  hip2hdr.h  hipbasic.h  hips1.c  hips1.h  hips2.c  hips2.h  hsizepix.c  img_file.c  img_file_hdr.h  jp_opts.c  jpeg.c  jpeg_hdr.h  (+40 more)
libsrc/flycap/: .gitignore  Makefile.am  README  cam_ctl.c  fly.c  fly.h  (+3 more)
src/: .gitignore  Makefile.am  README  datamain.c  fmtgps.c  math.c  mean.c  pass_thru.c  permute.c  quip_main.c  quip_main.m  quip_test.sh  quip_test1.c  vt_main.c
(+1429 files in other folders)
